<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notification Center for Pebble</string>
    <string name="title_activity_main">Notification Center</string>
    <string name="notifierLicense">
<![CDATA[
	<p><strong>Pebble Notifier</strong></p>

<p>Copyright (c) 2013 Dattas Moonchaser</p>

<p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>

<p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>

<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>

	<p><strong>Java WebSocket</strong></p>

 <p>Copyright (c) 2010-2012 Nathan Rajlich</p>

 <p>Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
 files (the "Software"), to deal in the Software without
 restriction, including without limitation the rights to use,
 copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the
 Software is furnished to do so, subject to the following
 conditions:</p>

 <p>The above copyright notice and this permission notice shall be
 included in all copies or substantial portions of the Software.

 <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 OTHER DEALINGS IN THE SOFTWARE.</p>
]]>
    </string>

    <string-array name="app_modes">
        <item>Excluding mode</item>
        <item>Including mode</item>
    </string-array>
    <string-array name="fontSizeText">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="fontSizeValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="tasker_actions">
        <item>Send notification</item>
        <item>Change setting</item>
    </string-array>
    <string-array name="setting_value">
        <item>Enable</item>
        <item>Disable</item>
    </string-array>

    <string name="title_activity_tasker_setup">TaskerSetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="appModePickerLabel">App Selection:</string>
    <string name="appModePickerDescription">In <b>including</b> mode only notifications from the apps that are selected will sent to Pebble. In <b>excluding</b> mode all notifications will be sent to Pebble except those from applications selected.</string>

    <string-array name="appModePickerModes">
        <item>Exclude</item>
        <item>Include</item>
    </string-array>

    <string name="regexModePickerLabel">Regex Filters:</string>
    <string name="regexModePickerDescription">Global filter by keywords/regular expressions for notifications that should be included/excluded from displaying.</string>

    <string-array name="regexModePickerModes">
        <item>Exclude</item>
        <item>Include</item>
    </string-array>

    <string name="replacementListTitle">Regex Filters:</string>
    <string name="replacementListDescription">Global filter by keywords/regular expressions for notifications that should be included/excluded from displaying.</string>
    <string name="replacement_description">In this window you can define replacement pairs. Notification Center will swap specified characters with specified text. Use that to remove or translate characters that Pebble does not display to readable text.</string>
    <string name="original_character">Original character:</string>
    <string name="replacement">Replacement:</string>
    <string name="enterChracter">You need to enter one character or unicode code for it!</string>
    <string name="importNoFiles">No dictionary files found.\n\nPlace your replacement dictionary .txt files into NotificationCenter folder on your phone\'s storage and try again.</string>
    
    <string name="per_app_title">Per App Settings</string>
    <string name="per_app_filter_mode_text">Filters work-mode:</string>
    <string name="per_app_description">Per App filters by keywords/regular expressions for notifications that should be included/excluded from displaying.</string>
    <string-array name="per_app_filter_mode_spinner">
        <item>Both applied</item>
        <item>Include ONLY of the Excluded</item>
        <item>Exclude ONLY of the Included</item>
    </string-array>
    <string name="regex_include">Include</string>
    <string name="regex_exclude">Exclude</string>
    
</resources>